fix broken css for header

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,6 +1,5 @@
 .contact {
     background: var(--background-els);
-    width: 100%;
     padding: 20px;
     color: var(--text);
     border-radius: 20px;
@@ -18,31 +17,27 @@
     display: flex;
     align-items: center;
     font-style: normal;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: bold;
     text-decoration: underline;
     margin: 10px 0;
 }
 
 .block h4 img {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
+    width: 1.4em;
+    height: 1.4em;
+    margin-right: 10px;
 }
 
 .contact address {
     width: fit-content;
     margin: 0 auto;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     line-height: 1.5em;
 }
 
-.contact address .block {
-    width: 40vw;
-}
-
 .contact p, .contact a {
-    font-size: 1.1em;
+    font-size: 1.4em;
 }
 
 .contact a {
